framec_tests/language_specific/python/v3_facade_smoke/negative/strict_bad_decorator_def.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(1)
                @decorator
                def (x):
                    pass
            }
        }
        $B {
        }
}

